# Gameboy-Simulator

./: GB_Bits.h  GB_CPU.cpp  GB_CPU.h  GB_Const.cpp  GB_Const.h  GB_FileOperator.cpp  GB_Window.cpp  GB_Window.h  GB_memory.cpp  GB_memory.h  GameBoyEmulator.sln  LICENSE.md  README.md  main.cpp  main.h  score_assignment.txt  timer.cpp
Debug/: GameBoyEmulator.ilk  tank.gb
GameBoyEmulator/: GB_CPU.cpp  GB_CPU.h  GB_Const.cpp  GB_Const.h  GB_FileOperator.h  GB_Type.h  GB_Window.cpp  GB_memory.cpp  GB_memory.h  GameBoyEmulator.vcxproj  GameBoyEmulator.vcxproj.filters  main.cpp  mali4.gb
GameBoyEmulator/Debug/: vc141.idb
GameBoyEmulator/Debug/GameBoyEmulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameBoyEmulator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
doc/: 答辩PPT.pptx
prerequisties/lib/: libSDL2-2.0.0.dylib
source/: CMakeLists.txt  GB_Bits.cpp  GB_CPU.cpp  GB_CPU.h  GB_Timer.cpp  GB_Timer.h  GB_Type.h  main.cpp
